# BrightNexus-linux

./: .gitignore  Cargo.toml  README.md  rust-toolchain.toml
.github/workflows/: ci.yml  pages.yml
crates/brightnexus-bridge/: Cargo.toml
crates/brightnexus-bridge/src/: main.rs
crates/brightnexus-bridge/tests/: integration.rs
crates/brightnexus-core/: Cargo.toml
crates/brightnexus-core/src/: bridge.rs  credentials.rs  crypto.rs  ecies.rs  error.rs  geo.rs  handler.rs  identity.rs  lib.rs  paths.rs  policy.rs  session.rs  socket.rs
crates/brightnexus-core/tests/: vectors.rs
crates/brightnexus-gtk/: Cargo.toml
crates/brightnexus-gtk/src/: app.rs  geo_prompt.rs  main.rs  settings.rs  tray.rs
crates/brightnexus-platform/: Cargo.toml
crates/brightnexus-platform/src/: attestation.rs  factory.rs  file_identity.rs  geo_source.rs  geoclue.rs  lib.rs  tpm2.rs
crates/brightnexus-platform/tests/: platform.rs
debian/: brightnexus-bridge.postinst  brightnexus.postinst  changelog  control  copyright  postinst  rules
debian/source/: format
docs/: CNAME  TESTING-PARALLELS.md  index.html
packaging/: brightnexus.desktop
packaging/launchpad/: README.md  upload.sh
scripts/: ci-vm.sh
tests/integration/: bridge_smoke.sh
tests/vectors/: README.md  dd-ecies-hkdf-v1.hex  session-hkdf-v1.hex  session-hkdf-v1.json  transcript-v1.hex  transcript-v1.json
