[workspace]
resolver = "2"
members = [
    "crates/brightnexus-core",
    "crates/brightnexus-platform",
    "crates/brightnexus-bridge",
    "crates/brightnexus-gtk",
]
default-members = [
    "crates/brightnexus-core",
    "crates/brightnexus-platform",
    "crates/brightnexus-bridge",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
rust-version = "1.85"
license = "MIT"
authors = ["Digital Defiance"]
repository = "https://github.com/Digital-Defiance/BrightNexus-linux"
description = "BrightNexus for Linux — TPM2-backed BrightLink bridge"

[workspace.dependencies]
aes-gcm = "0.10"
anyhow = "1"
base64 = "0.22"
hkdf = "0.12"
p256 = { version = "0.13", features = ["ecdsa"] }
rand = "0.8"
secp256k1 = { version = "0.29", features = ["rand", "global-context"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
thiserror = "2"
tokio = { version = "1", features = ["rt-multi-thread", "sync", "time", "macros"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
zeroize = { version = "1", features = ["derive"] }
async-trait = "0.1"
futures = "0.3"
libc = "0.2"
nix = { version = "0.29", features = ["socket", "uio"] }
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["v7", "serde"] }
hex = "0.4"
once_cell = "1"
