[package]
name = "brightnexus-platform"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "Linux platform pluggables for BrightNexus"

[features]
default = []
tpm2 = ["dep:tss-esapi"]
geoclue = ["dep:zbus"]

[dependencies]
brightnexus-core = { path = "../brightnexus-core" }
anyhow.workspace = true
async-trait.workspace = true
base64.workspace = true
p256 = { version = "0.13", features = ["ecdsa"] }
rand.workspace = true
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true
hex.workspace = true
thiserror.workspace = true
tracing.workspace = true
zeroize.workspace = true
nix.workspace = true
secret-service = { version = "4", features = ["rt-tokio-crypto-rust"] }
keyring = "3"
tss-esapi = { version = "7", optional = true }
zbus = { version = "4", optional = true, default-features = false, features = ["tokio"] }
tokio = { workspace = true, features = ["time"] }

[dev-dependencies]
tempfile = "3"
